# review-summary-engine

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/in/: writeturn project reviews.csv
scripts/: export_project_packs.py  generate_project_summaries.py  generate_review_tags.py  inspect_csv.py  run_project_summary_batches.sh  run_review_tag_batches.sh
src/review_summarizer/: config.py  exporter.py  io.py  openai_client.py  project_summary.py  resume.py  review_tags.py  review_uid.py  schemas.py  tag_schemas.py  tokenizer.py
src/review_summary_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
