[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-summary-engine"
version = "0.0.1"
description = "Project-wise review summarization + per-review tag generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.0.0",
  "pandas>=2.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "tenacity>=8.0.0",
  "tiktoken>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
